--- a/Cal/index.html
+++ b/Cal/index.html
@@ -1,4 +1,4 @@
-// create a simple calculator using Javascript
+<!--create a simple calculator using Javascript-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,7 +6,7 @@
 	<meta name="description" content="Javascript Calculator">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="mystyle.css" type="text/css">
-	
+<!--external stylesheet-->
 	<title>Simple Calculator</title>
 </head>
 <body>
