--- a/digital clock/index.html
+++ b/digital clock/index.html
@@ -1,1 +1,14 @@
-
+<!--Create a simple digital clock-->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="clock.css" type="text/css">
+    <title>Digital Clock</title>
+</head>
+<body>
+    <div id="banner">Local Time in Chemnitz</div>
+  <div id="clock"></div>
+</body>
+</html>
