--- a/digital clock/index.html
+++ b/digital clock/index.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div id="banner">Local Time in Chemnitz</div>
-  <div id="clock"></div>
+    <div id="clock"></div>
+    <script src="clock.js"></script>
 </body>
 </html>
