--- a/Tip calculator/index.html
+++ b/Tip calculator/index.html
@@ -12,6 +12,10 @@
     <h1 id="perc">Tip Calculator</h1>
     <form id="calc">
         <p>Total Bill: <input type="number" id="amount"></p>
+        <p>Tip (%): <input type="number" id="percentage"></p>
+        <p>Tip Amount: <input id="tip" disabled="disabled"></p>
+        <p>Total: <input id="total" disabled="disabled"></p>
+        <p><input id="addup" type="submit" value="Calculate"></p>
     </form>
     <script src="script.js"></script>
 </body>
