--- a/Color Flipper/index.html
+++ b/Color Flipper/index.html
@@ -7,14 +7,36 @@
     <title>CL  || simple</title>
     <!-- stylesheet -->
     <link rel="stylesheet" href="style.css">
+    <!-- CSS only -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- javascript -->
+    <!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </head>
 <body>
     <nav>
         <div class="nav-center">
-
+            <h3>Color Flipper</h3>
+            <ul class="nav-links">
+                <li>
+                    <a href="index.html">Simple</a>
+                </li>
+                <li>
+                    <a href="hex.html">Hex</a>
+                </li>
+            </ul>
         </div>
     </nav>
+    <main>
+        <div class="container">
+            <h2>Background Color: 
+                <span class="color">
+                    #f1f5f8
+                </span>
+            </h2>
+            <button class="btn btn-primary" id="btn">Click Me</button>
+        </div>
+    </main>
 </body>
 </html>
