--- a/Color Flipper/index.html
+++ b/Color Flipper/index.html
@@ -12,7 +12,7 @@
     <!-- javascript -->
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="colorFlipper.js"></script>
 </head>
 <body>
     <nav>
@@ -35,7 +35,7 @@
                     #f1f5f8
                 </span>
             </h2>
-            <button class="btn btn-primary" id="btn">Click Me</button>
+            <button class="btn btn-primary" id="button">Click Me</button>
         </div>
     </main>
 </body>
