--- a/Counter/index.html
+++ b/Counter/index.html
@@ -15,6 +15,21 @@
 <script src='counter.js'></script>
 </head>
 <body>
+    <main>
+        <div class="container">
+            <h1>
+                Counter
+            </h1>
+            <span id="value">0</span>
+            <div class="button-counter">
+                <button class="btn decrease">decrease</button>
+                <button class="btn reset">reset</button>
+                <button class="btn increase">increase</button>
+
+            </div>
+
+        </div>
+    </main>
     
 </body>
 </html>
