--- a/Counter/index.html
+++ b/Counter/index.html
@@ -9,27 +9,26 @@
     <link rel="stylesheet" href="style.css">
     <!-- CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <!-- javascript -->
+
     <!-- JavaScript Bundle with Popper -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<!-- javascript -->
 <script src='counter.js'></script>
 </head>
+
 <body>
     <main>
         <div class="container">
             <h1>
                 Counter
             </h1>
-            <span id="value">0</span>
-            <div class="button-counter">
+            <span class="value">0</span>
+            <div class="button-container">
                 <button class="btn decrease">decrease</button>
                 <button class="btn reset">reset</button>
                 <button class="btn increase">increase</button>
-
             </div>
-
         </div>
     </main>
-    
 </body>
 </html>
