--- a/A contact form with local storage/index.html
+++ b/A contact form with local storage/index.html
@@ -6,7 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact Form</title>
+
+    <!-- stylesheet -->
     <link rel="stylesheet" href="mystyle.css" type="text/css">
+
+    <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
 </head>
@@ -27,6 +31,7 @@
         <input type="reset" id="clear">
 
     </form>
+    <!-- javascript -->
     <script src="myscript.js"></script>
 </body>
 </html>
