--- a/Color Changer/index.html
+++ b/Color Changer/index.html
@@ -6,13 +6,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Click to change the background color</title>
+
+    <!-- jquery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
+    <!-- stylesheet -->
     <link rel="stylesheet" href="colorChanger.css">
 </head>
 <body>
     <div id="container">Click the button to change the background color</div>
     <button id="click">Click Me!</button>
+    <!-- javascript -->
     <script src="colorChanger.js"></script>
 </body>
 </html>
