--- a/digital clock/index.html
+++ b/digital clock/index.html
@@ -4,12 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- stylesheet -->
     <link rel="stylesheet" href="clock.css" type="text/css">
     <title>Digital Clock</title>
 </head>
 <body>
     <div id="banner">Local Time in Chemnitz</div>
     <div id="clock"></div>
+    <!-- javascript -->
     <script src="clock.js"></script>
 </body>
 </html>
