--- a/Modal/index.html
+++ b/Modal/index.html
@@ -21,9 +21,16 @@
         </div>
     </header>
     <!-- modal  -->
-
+    <div class="modal">
+        <div class="modal-container">
+            <h3>modal content</h3>
+            <button class="close-btn">
+                <i class="fas fa-times"></i>
+            </button>
+        </div>
+    </div>
 
     <!-- javascript -->
-    <script src="sidebar.js"></script>    
+    <script src="modal.js"></script>    
 </body>
 </html>
