--- a/Our Menu/index.html
+++ b/Our Menu/index.html
@@ -11,9 +11,80 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
     />
     <!-- styles -->
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+    <section class="menu">
+        <!-- title -->
+        <div class="title">
+            <h2>our menu</h2>
+            <div class="underline"></div>
+        </div>
+        <!-- filter buttons -->
+        <!-- menu items -->
+        <div class="section-center">
+            <!-- single item -->
+            <article class="menu-item">
+                <img src="./menu-item.jpg" alt="menu item" class="photo">
+                <div class="item-info">
+                    <header>
+                        <h4>Beef Burger</h4>
+                        <h4 class="price">&euro;15</h4>
+                    </header>
+                    <p class="item-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Velit reiciendis soluta, quasi rem temporibus accusantium.
+                    </p>
+                </div>
+            </article>
+            <!-- end of single item -->
+            <!-- single item -->
+            <article class="menu-item">
+                <img src="./menu-item" alt="menu item" class="photo">
+                <div class="item-info">
+                    <header>
+                        <h4>Beef Burger</h4>
+                        <h4 class="price">&euro;15</h4>
+                    </header>
+                    <p class="item-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Velit reiciendis soluta, quasi rem temporibus accusantium.
+                    </p>
+                </div>
+            </article>
+            <!-- end of single item -->
+            <!-- single item -->
+            <article class="menu-item">
+                <img src="./menu-item" alt="menu item" class="photo">
+                <div class="item-info">
+                    <header>
+                        <h4>Beef Burger</h4>
+                        <h4 class="price">&euro;15</h4>
+                    </header>
+                    <p class="item-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Velit reiciendis soluta, quasi rem temporibus accusantium.
+                    </p>
+                </div>
+            </article>
+            <!-- end of single item -->
+            <!-- single item -->
+            <article class="menu-item">
+                <img src="./menu-item" alt="menu item" class="photo">
+                <div class="item-info">
+                    <header>
+                        <h4>Beef Burger</h4>
+                        <h4 class="price">&euro;15</h4>
+                    </header>
+                    <p class="item-description">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+                        Velit reiciendis soluta, quasi rem temporibus accusantium.
+                    </p>
+                </div>
+            </article>
+            <!-- end of single item -->
+        </div>
+    </section>
   <!-- javascript -->
   <script src="menu.js"></script>  
 </body>
