--- a/Our Menu/index.html
+++ b/Our Menu/index.html
@@ -25,7 +25,7 @@
         <div class="section-center">
             <!-- single item -->
             <article class="menu-item">
-                <img src="./menu-item.jpg" alt="menu item" class="photo">
+                <img src="./images/item-1.jpg" alt="menu item" class="photo">
                 <div class="item-info">
                     <header>
                         <h4>Beef Burger</h4>
@@ -39,7 +39,7 @@
             </article>
             <!-- end of single item -->
             <!-- single item -->
-            <article class="menu-item">
+            <!-- <article class="menu-item">
                 <img src="./menu-item" alt="menu item" class="photo">
                 <div class="item-info">
                     <header>
@@ -51,10 +51,10 @@
                         Velit reiciendis soluta, quasi rem temporibus accusantium.
                     </p>
                 </div>
-            </article>
+            </article> -->
             <!-- end of single item -->
             <!-- single item -->
-            <article class="menu-item">
+            <!-- <article class="menu-item">
                 <img src="./menu-item" alt="menu item" class="photo">
                 <div class="item-info">
                     <header>
@@ -66,10 +66,10 @@
                         Velit reiciendis soluta, quasi rem temporibus accusantium.
                     </p>
                 </div>
-            </article>
+            </article> -->
             <!-- end of single item -->
             <!-- single item -->
-            <article class="menu-item">
+            <!-- <article class="menu-item">
                 <img src="./menu-item" alt="menu item" class="photo">
                 <div class="item-info">
                     <header>
@@ -81,7 +81,7 @@
                         Velit reiciendis soluta, quasi rem temporibus accusantium.
                     </p>
                 </div>
-            </article>
+            </article> -->
             <!-- end of single item -->
         </div>
     </section>
