--- a/Our Menu/index.html
+++ b/Our Menu/index.html
@@ -21,6 +21,12 @@
             <div class="underline"></div>
         </div>
         <!-- filter buttons -->
+        <div class="button-container">
+            <button class="filter-btn" type="button" data-id="all">all</button>
+            <button class="filter-btn" type="button" data-id="burger">burger</button>
+            <button class="filter-btn" type="button" data-id="pasta">pasta</button>
+            <button class="filter-btn" type="button" data-id="pizza">pizza</button>
+        </div>
         <!-- menu items -->
         <div class="section-center">
             <!-- single item -->
