--- a/Our Menu/index.html
+++ b/Our Menu/index.html
@@ -92,6 +92,6 @@
         </div>
     </section>
   <!-- javascript -->
-  <script src="menu.js"></script>  
+  <script src="anotherMenu.js"></script>  
 </body>
 </html>
