--- a/Scroll/index.html
+++ b/Scroll/index.html
@@ -77,7 +77,7 @@
     <footer class="section">
     <p>
         copyright &copy; ---------------------------
-        <span id="date"></span>. all rights reserved
+        <span id="date"></span>. all rights reserved.
     </p>
     </footer>
     <a class="scroll-link top-link" href="#home">
