--- a/Grocery Bud/index.html
+++ b/Grocery Bud/index.html
@@ -26,7 +26,19 @@
       </form>
       <!-- list -->
       <div class="grocery-container">
-        <div class="grocery-list"></div>
+        <div class="grocery-list">
+            <article class="grocery-item">
+                <p class="title">item</p>
+                <div class="btn-container">
+                    <button class="edit-btn" type="button">
+                        <i class="fas fa-edit"></i>
+                    </button>
+                    <button class="delete-btn" type="button">
+                        <i class="fas fa-trash"></i>
+                    </button>
+                </div>
+            </article>
+        </div>
         <button class="clear-btn">clear items</button>
       </div>
     </section>
