--- a/Grocery Bud/index.html
+++ b/Grocery Bud/index.html
@@ -27,7 +27,7 @@
       <!-- list -->
       <div class="grocery-container">
         <div class="grocery-list">
-            <article class="grocery-item">
+            <!-- <article class="grocery-item">
                 <p class="title">item</p>
                 <div class="btn-container">
                     <button class="edit-btn" type="button">
@@ -37,7 +37,7 @@
                         <i class="fas fa-trash"></i>
                     </button>
                 </div>
-            </article>
+            </article> -->
         </div>
         <button class="clear-btn">clear items</button>
       </div>
