--- a/Cursor position/index.html
+++ b/Cursor position/index.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="box">
-
+        Move your cursor to get the position
     </div>
     <script src="cursor.js"></script>
 </body>
