--- a/Questions with Radio Button/index.html
+++ b/Questions with Radio Button/index.html
@@ -15,6 +15,11 @@
             <h2 class="text-primary display-3 my-4">Quiz Questions</h2>
         </div>
     </div>
+    <div class="score py-4 bg-light d-none text-center">
+        <div class="container lead">
+            <p>You are <span class="text-primary display-4 p-3"></span> correct</p>
+        </div>
+    </div>
     <!-- quiz section -->
     <div class="quiz py-4 bg-primary">
         <div class="container">
