--- a/digital clock/index.html
+++ b/digital clock/index.html
@@ -11,7 +11,10 @@
 <body>
     <div id="banner">Local Time in Chemnitz</div>
     <div id="clock"></div>
+
+    
     <!-- javascript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
     <script src="clock.js"></script>
 </body>
 </html>
