--- a/Today's Day/index.html
+++ b/Today's Day/index.html
@@ -14,9 +14,10 @@
         <div>
             <p id="weekday">Display day of the week</p>
         </div>
-
     </div>
+
+    <!-- javascript -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/date-fns/1.30.1/date_fns.min.js"></script>
     <script src="myscript.js"></script>
-    
 </body>
 </html>
