--- a/Weather forecast/index.html
+++ b/Weather forecast/index.html
@@ -18,7 +18,18 @@
         </form>
 
         <div class="card shadow-lg rounded">
-            
+            <img src="https://via.placeholder.com/400x300" class="time card-img-top">
+            <div class="icon bg-light mx-auto text-center">
+                <!-- icon -->
+            </div>
+            <div class="text-center text-muted text-uppercase details">
+                <h5 class="my-3">City name</h5>
+                <div class="my-3">Weather condition</div>
+                <div class="display-6 my-4">
+                    <span class="temp">temp</span>
+                    <span>&deg;c</span>
+                </div>
+            </div>
         </div>
     </div>
 
