--- a/Weather forecast/index.html
+++ b/Weather forecast/index.html
@@ -13,7 +13,7 @@
     <div class="container my-5 mx-auto">
         <h1 class="text-muted text-center my-3">Weather Search</h1>
         <form class="change-location text-center text-muted">
-            <label for="city" class="my-2 fs-5">Enter a location for weather information</label>
+            <label for="city" class="my-2">Enter a location for weather information</label>
             <input type="text" name="city" class="form-control p-4">
         </form>
 
@@ -25,9 +25,8 @@
             <div class="text-center text-muted text-uppercase details">
                 <h5 class="my-3">City name</h5>
                 <div class="my-3">Weather condition</div>
-                <div class="display-6 my-4">
+                <div class="display-6 my-3">
                     <span class="temp">temp</span>
-                    <span>&deg;c</span>
                 </div>
             </div>
         </div>
