--- a/Weather forecast/index.html
+++ b/Weather forecast/index.html
@@ -27,14 +27,13 @@
                 <div class="my-3">Weather condition</div>
                 <div class="display-6 my-4">
                     <span class="temp">temp</span>
-                    <span>&deg;c</span>
                 </div>
             </div>
         </div>
     </div>
 
     <!-- javascripts -->
+    <script src="scripts/config.js"></script>
     <script src="scripts/forecast.js"></script>
-    <script src="scripts/weatherApp.js"></script>
 </body>
 </html>
