--- a/Weather forecast/index.html
+++ b/Weather forecast/index.html
@@ -11,21 +11,21 @@
 </head>
 <body>
     <div class="container my-5 mx-auto">
-        <h1 class="text-muted text-center my-3">Weather Search</h1>
-        <form class="change-location text-center text-muted">
+        <h1 class="text-muted text-center my-4">Weather Search</h1>
+        <form class="change-location text-center my-4 text-muted">
             <label for="city" class="my-2">Enter a location for weather information</label>
             <input type="text" name="city" class="form-control p-4">
         </form>
 
         <div class="card shadow-lg rounded">
-            <img src="https://via.placeholder.com/400x300" class="time card-img-top">
+            <img src="https://via.placeholder.com/500x300" class="time card-img-top">
             <div class="icon bg-light mx-auto text-center">
                 <!-- icon -->
             </div>
             <div class="text-center text-muted text-uppercase details">
                 <h5 class="my-3">City name</h5>
                 <div class="my-3">Weather condition</div>
-                <div class="display-6 my-3">
+                <div class="display-5 my-3">
                     <span class="temp">temp</span>
                 </div>
             </div>
