--- a/Weather forecast/index.html
+++ b/Weather forecast/index.html
@@ -17,15 +17,15 @@
             <input type="text" name="city" class="form-control p-4">
         </form>
 
-        <div class="card shadow-lg rounded">
-            <img src="https://via.placeholder.com/500x300" class="time card-img-top">
+        <div class="card shadow-lg rounded d-none">
+            <!-- <img src="https://via.placeholder.com/500x300" class="time card-img-top">
             <div class="icon bg-light mx-auto text-center">
-                <!-- icon -->
-            </div>
-            <div class="text-center text-muted text-uppercase details">
-                <h5 class="my-3">City name</h5>
-                <div class="my-3">Weather condition</div>
-                <div class="display-5 my-3">
+                <img src="" alt="">
+            </div> -->
+            <div class="text-center text-uppercase details">
+                <h5 class="display-6 my-3">City name</h5>
+                <div class="display-6 my-3">Weather condition</div>
+                <div class="display-3 my-3">
                     <span class="temp">temp</span>
                 </div>
             </div>
