--- a/Weather forecast/index.html
+++ b/Weather forecast/index.html
@@ -35,5 +35,6 @@
     <!-- javascripts -->
     <script src="scripts/config.js"></script>
     <script src="scripts/forecast.js"></script>
+    <!-- <script src="scripts/anotherWay.js"></script> -->
 </body>
 </html>
