--- a/Database_01/index.html
+++ b/Database_01/index.html
@@ -32,32 +32,22 @@
 
 
 
-
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "firebase/app";
-        import { getFirestore, collection, getDocs } from 'firebase/firestore/lite';
-
-        // import { collection, doc, setDoc } from "firebase/firestore";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-    
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
+    <script src="config.js"></script>
+    <script>
         const firebaseConfig = {
-        apiKey: "AIzaSyBLVdhGi9u3Bk3hJl8k21biVZBLZykFZLQ",
-        authDomain: "javascript-e7ea4.firebaseapp.com",
-        projectId: "javascript-e7ea4",
-        storageBucket: "javascript-e7ea4.appspot.com",
-        messagingSenderId: "179454424520",
-        appId: "1:179454424520:web:e622fc2f2fba2708297cfd",
-        measurementId: "G-SNJHV4HKVL"
+        apiKey: config.apikey,
+        authDomain: config.authDomain,
+        projectId:config.projectId,
+        storageBucket: config.storageBucket,
+        messagingSenderId: config.messagingSenderId,
+        appId: config.appId,
+        measurementId:config.measurementId
         };
     
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const db = getFirestore(app);
-
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore()
     </script>
 
 
