--- a/Database_01/index.html
+++ b/Database_01/index.html
@@ -8,7 +8,7 @@
     <title>Database (Firebase)</title>
 </head>
 <body>
-    <h1>Database (Firebase)</h1>
+    <h1 class="text-center">Database (Firebase)</h1>
     <div class="container my-5">
         <h2>Recipes</h2>
         <ul>
