--- a/chat_project/index.html
+++ b/chat_project/index.html
@@ -53,6 +53,25 @@
         <div class="update-alert"></div>
     </form>
 </div>
+
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
+    <script src="scripts/config.js"></script>
+    <script>
+        const firebaseConfig = {
+            apiKey: config.apikey,
+            authDomain: config.authDomain,
+            projectId:config.projectId,
+            storageBucket: config.storageBucket,
+            messagingSenderId: config.messagingSenderId,
+            appId: config.appId,
+            measurementId:config.measurementId
+        };
+
+        firebase.initializeApp(firebaseConfig);
+        const db = firebase.firestore()
+    </script>
+
     <script src="scripts/chat.js"></script>
     <script src="scripts/ui.js"></script>
     <script src="scripts/app.js"></script>
