--- a/Database_01/index.html
+++ b/Database_01/index.html
@@ -26,15 +26,10 @@
     </div>
 
 
-
-
-
-
-
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/5.9.1/firebase-firestore.js"></script>
     <script src="config.js"></script>
-    <script>
+    <script>                        //this scripts will be provided by API provider
         const firebaseConfig = {
         apiKey: config.apikey,
         authDomain: config.authDomain,
@@ -46,7 +41,7 @@
         };
     
         firebase.initializeApp(firebaseConfig);
-        const db = firebase.firestore()
+        const db = firebase.firestore()             //to get access to all method of firestore
     </script>
 
     <script src="database.js"></script>
